# PNGQuantAndroid

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/haydar/pngquantandroidsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/haydar/pngquantandroidsample/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/io/haydar/pngquantandroidsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pngquantandroid/: CMakeLists.txt  build.gradle
pngquantandroid/src/androidTest/java/io/haydar/pngquantandroid/: ExampleInstrumentedTest.java
pngquantandroid/src/main/: AndroidManifest.xml
pngquantandroid/src/main/cpp/: pngquantandroid.cpp
pngquantandroid/src/main/cpp/pngquant/: lodepng.c  lodepng.h  pngquant.c
pngquantandroid/src/main/cpp/pngquant/zlib/: gzlib.c
pngquantandroid/src/main/java/io/haydar/pngquantandroid/: PNGQuantAndroid.java
pngquantandroid/src/test/java/io/haydar/pngquantandroid/: ExampleUnitTest.java
